bugfix tooltip z-index

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -55,4 +55,5 @@ div.tooltipFeature {
     border: 0px;
     border-radius: 8px;
     pointer-events: none;
+    z-index: 999;
 }
